--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,16 +1,32 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>profile</title>
+  <title>footer neomorphism</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-     
+  <div class="container">
+  <div class="media">
+    <a href="#"></a>
+    <i class="fab fa-instagram"></i>
+    <a href="#"></a>
+    <i class="fab fa-facebook"></i>
+    <a href="#"></a>
+    <i class="fab fa-github"></i>
+    <a href="#"></a>
+    <i class="fab fa-youtube"></i> 
+    <a href="#"></a>
+    <i class="fab fa-skype"></i>
+  </div>
+   <div class="text">
+        <span>follow me on social media</span>
+   </div>
+  </div>
 </body>
 </html>
  
